Alterações finais da aula 10/04/2025

--- a/base_templates/global/partials/_footer.html
+++ b/base_templates/global/partials/_footer.html
@@ -1,14 +1,5 @@
-<div class="footer">
-    <div class="footer-container">
-        <p class="footer-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Suscipit eveniet dignissimos provident, illo dolorem enim autem quo nulla a perspiciatis et nisi repellat eaque recusandae? 
-            Voluptas non nobis eius. Facere.</p>
-        <ul class="footer-contato">
-            <li><a href="#">contato@consulta.me</a></li>
-            <li><a href="#">21 3656-9878</a></li>
-            <li><a href="#">Nosso Instagram</a></li>
-            <li><a href="#">Nosso Linkedin</a></li>
-        </ul>
-        <p class="footer-copy">Consulta.me. Alguns direitos reservados.</p>
+<footer class="footer">
+    <div class="container">
+        <p>2025 - Desenvolvido por Michel Sanginette| Projeto fictício sem fins comerciais.</p>
     </div>
-</div>
+</footer>
