--- a/base_templates/global/partials/_header.html
+++ b/base_templates/global/partials/_header.html
@@ -1,2 +1,9 @@
 {% load static %}
-<h1>Aqui irá ficar o header</h1>
+<header class="header">
+    <div class="container header-container">
+        <a href="#" class="logo"><img src="assets/logo.svg" alt="Logo da Consulta.me"></a>
+        <div class="navbar-form">
+            <a href="#" class="btn-link">Login</a>
+        </div>
+    </div>
+</header>
